# ll_toolkit

./: .gitignore  CLAUDE.md  README.md  ResearchEvaluation.md  Review.md  STATUS.md  ToolKitReview.md  environment.yml  geotoken_cadling_integration_analysis.md  image_to_code_implementation.html  pyproject.toml  training_data_requirements.md  verify_graph_features.py
cadling/: Adjustments.md  CAD_AI_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CadlingReview.md  Development.md  Overview.md  Plan.md  Purpose.md  README.md  Todo.md  coverage.json  environment.yml  pyproject.toml  requirements.txt  test_backends.py
cadling/benchmarks/: benchmark_chunking.py
cadling/cadling/: README.md  __init__.py  chunking.py  cli.py
cadling/cadling/backend/: __init__.py  abstract_backend.py  brep_backend.py  cadling_parse_backend.py  document_converter.py  dxf_backend.py  geotoken_integration.py  iges_backend.py  pdf_backend.py  pythonocc_core_backend.py
cadling/cadling/chunker/: __init__.py  base_chunker.py  hierarchical_chunker.py  hybrid_chunker.py
cadling/cadling/cli/: __init__.py  generate.py  hub.py  main.py
cadling/cadling/core/: __init__.py
cadling/cadling/data/: __init__.py  collators.py  hub_publisher.py  schemas.py  streaming.py  webdataset.py
cadling/cadling/datamodel/: __init__.py  accelerator_options.py  backend_options.py  base_models.py  brep.py  extraction.py  generation.py  geometry_2d.py  mesh.py  pipeline_options.py  pipeline_options_asr_model.py  pipeline_options_vlm_model.py  settings.py  step.py  stl.py  vlm_model_specs.py
cadling/cadling/evaluation/: __init__.py  generation_metrics.py
cadling/cadling/experimental/: README.md  __init__.py
cadling/cadling/generation/: __init__.py  pipeline.py
cadling/cadling/lib/: __init__.py  hashing.py  occ_wrapper.py
cadling/cadling/models/: __init__.py  assembly_analysis.py  base_model.py  classification.py  constraint_detection.py  feature_extraction.py  geometry_analysis.py  geometry_normalization.py  interference_check.py  mesh_quality.py  pattern_detection.py  property_prediction.py  similarity.py  surface_analysis.py  topology_validation.py  vlm_model.py
cadling/docs/: RequiredToBeCorrected.md  ReviewFindings.md  UNIMPLEMENTED.md  visualization_plan.md
cadling/scripts/: claude_generate.py
cadling/tests/: conftest.py  test_indexer_contract_conformance.py
geotoken/: GeotokenReview.md  README.md  pyproject.toml
geotoken/docs/: architecture.md  data-requirements.md  integration.md
geotoken/geotoken/: __init__.py  config.py
geotoken/tests/: conftest.py
ll_brepnet/: ATTRIBUTION.md  README.md  environment.yaml  pyproject.toml  requirements.txt
ll_brepnet/ll_brepnet/: __init__.py  train.py
ll_brepnet/mlx/: train_brepnet_mlx.py
ll_brepnet/tests/: conftest.py  test_dataset_collate.py  test_eval.py  test_extract_from_step.py  test_json_frontend.py  test_model.py
ll_gen/: GenReview.md  pyproject.toml
ll_gen/eval/: heldout.jsonl
ll_gen/ll_gen/: __init__.py  config.py
ll_gen/mlx/: ar_generator_mlx.py  latent_diffusion_mlx.py  vae_mlx.py
ll_gen/scripts/: condition_experiment.py  download_deepcad_subset.py  train_diffusion_codec.py
ll_gen/tests/: conftest.py  test_checkpoint_roundtrip.py  test_code_executor.py  test_codegen.py  test_command_executor.py  test_conditioning.py  test_config.py  test_dataset_loads.py  test_datasets.py  test_deepcad_dsl.py  test_diffusion_ddpo.py  test_disposal.py  test_disposal_executor_schema.py  test_embeddings.py  test_feedback.py  test_generate_for_training.py  test_generators.py  test_integration_neural.py  test_log_prob_scorer.py  test_neural_imports.py  test_orchestrator_neural.py  test_pipeline.py  test_prompt_library.py  test_proof_of_life.py  test_proposals.py  test_resilient_checkpoint_load.py  test_rl_trainer.py  test_routing.py  test_surface_executor.py  test_train_epoch_smoke.py  test_training.py  test_training_cli.py  test_validity_eval.py  test_verification.py  test_warm_start.py
ll_ocadr/: IMPLEMENTATION_STATUS.md  README.md  __init__.py  environment.yml  pyproject.toml  requirements.txt  run_ll_ocadr_hf.py  test_ll_ocadr.py
ll_ocadr/mlx/: faithful_tower_mlx.py  train_ocadr_mlx.py
ll_ocadr/tests/: conftest.py  test_fixtures.py  test_vision_modality.py  test_wiring.py
ll_ocadr/vllm/: README_INFERENCE.md  __init__.py  config.py  latticelabs_ocadr.py  run_ll_ocadr.py  run_ll_ocadr_eval_batch.py
ll_stepnet/: CHANGELOG_STEP_AWARE.md  DATA_REQUIREMENTS.md  DATA_REQUIREMENTS_ANALYSIS.md  DATA_REQUIREMENTS_TOOL_README.md  PRETRAIN_STEP_AWARE.md  README.md  StepnetReview.md  demo_data_requirements.py  environment.yml  pyproject.toml  requirements.txt  verify_installation.py
ll_stepnet/examples/: analyze_data_requirements.py  inference_example.py  pretrain_unsupervised.py  train_classification.py  train_property_prediction.py
ll_stepnet/learning_curves/: learning_curve_20260110_020946.npz  learning_curve_summary_20260110_020946.json
ll_stepnet/mlx/: train_classification_mlx.py
ll_stepnet/scripts/: train_classification.py
ll_stepnet/stepnet/: __init__.py  annotations.py  conditioning.py  config.py  data.py  data_requirements.py  diffusion.py  encoder.py  features.py  generation_pipeline.py  latent_gan.py  output_heads.py  pretrain.py  reserialization.py  tasks.py  tokenizer.py  topology.py  trainer.py  vae.py  vertex_prediction.py  vqvae.py
ll_stepnet/test_results/: test_results_20260109_225550.txt  test_results_20260109_225622.txt  test_results_20260109_225719.txt  test_results_20260109_225744.txt  test_results_20260109_225831.txt
ll_stepnet/tests/: __init__.py  conftest.py  test_beam_search.py  test_command_type_decode_regression.py  test_generation_errors.py  test_generation_integration.py  test_geotoken_bridge.py  test_graph_encoder.py  test_models_and_training.py  test_native_integration.py  test_reserialization.py  test_streaming_integration.py  test_topology_builder.py  test_vae_sparse_param_loss.py  test_vertex_prediction.py  test_with_step_files.py  test_with_step_files.py.bak
ll_stepnet/tools/: deduplicate_methods.py
(+522 files in other folders)
