[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geotoken"
version = "0.1.0"
description = "Geometric tokenizer with adaptive quantization for CAD/mesh data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
mesh = ["trimesh>=3.20"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=geotoken --cov-report=term-missing --cov-fail-under=75"
markers = [
    "requires_trimesh: requires trimesh library",
]

[tool.setuptools.packages.find]
include = ["geotoken*"]
