[project]
name = "ll-ocadr"
version = "0.1.0"
description = "Lattice Labs Optical CAD Recognition - 3D Geometry Processing for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lattice Labs", email = "noreply@latticelabs.com"}
]
keywords = ["3D", "CAD", "STEP", "STL", "OBJ", "mesh", "vision-language", "multimodal", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "vllm>=0.4.0,<0.8.0",
    "trimesh>=3.23.0",
    "pythonocc-core>=7.7.0",
    "open3d>=0.17.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "huggingface-hub>=0.19.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
gpu = [
    "torch-cluster>=1.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ll_ocadr",
    "ll_ocadr.vllm",
    "ll_ocadr.vllm.process",
    "ll_ocadr.vllm.lattice_encoder",
]
# Flat layout: the project root IS the `ll_ocadr` package (it holds __init__.py
# directly), so map the top-level package to "." — otherwise setuptools looks
# for a non-existent ll_ocadr/ll_ocadr/ subdirectory and the install fails.
package-dir = {"ll_ocadr" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "requires_torch: marks tests that need PyTorch",
    "requires_pythonocc: marks tests that need pythonocc-core (conda-only)",
    "requires_trimesh: marks tests that need trimesh",
    "integration: marks integration tests",
    "unit: marks unit tests",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Match the sibling M-series packages (ll_gen, ll_clouds): the same lint
# standard across the toolkit. The broad root-level select enforces rules
# (e.g. PLC0415 import-outside-top-level) that conflict with this repo's
# mandated lazy-import pattern for heavy deps (torch / pythonocc), so ll_ocadr
# uses the package-local select its siblings use.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"vllm/lattice_encoder/**/*.py" = [
    "N806",  # uppercase tensor-dim locals (B, N, C, S, M) — standard DL notation
    "N812",  # `import torch.nn.functional as F` — universal PyTorch convention
]

[tool.isort]
profile = "black"
line_length = 100
